# simpletickets

./: .env.example  .gitignore  BLOCKERS.md  Makefile  README.md  ROADMAP.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_slack_submitter_id.py  0002_seed_sla_policies.py
backend/app/: bootstrap.py  config.py  database.py  main.py
backend/app/auth/: deps.py  google.py  jwt.py  tokens.py
backend/app/models/: __init__.py  audit_log.py  category.py  enums.py  ticket.py  ticket_attachment.py  ticket_history.py  ticket_reply.py  user.py
backend/app/routers/: activity.py  admin.py  app_config.py  attachments.py  auth.py  categories.py  health.py  history.py  notification_prefs.py  notifications.py  replies.py  reports.py  search.py  settings.py  sla.py  sla_policies.py  tickets.py
backend/app/schemas/: attachment.py  audit.py  auth.py  category.py  reply.py  search.py  sla_policy.py  ticket.py  user.py
backend/app/services/: audit.py  email.py  notifications.py  passwords.py  sla.py
backend/app/slack/: bot.py  handlers.py  service.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthImage.tsx  ErrorBoundary.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useActivity.ts  useAgents.ts  useAppConfig.ts  useAttachments.ts  useCategories.ts  useReplies.ts  (+3 more)
(+25 files in other folders)
