[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "simplytickets"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "authlib>=1.3.2",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "weasyprint>=62.0",
    "slack-bolt>=1.21.0",
    "pydantic-settings>=2.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.12",
    "pillow>=10.4.0",
    "itsdangerous>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
