[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simplytickets"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "slack-bolt>=1.21.0",
    "pydantic-settings>=2.5.0",
    "bcrypt>=4.0.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
